# MCPTest

./: Dockerfile  README.md  pyproject.toml  render.yaml  test_client.py
src/inventory_mcp/: server.py
